# my-dev-workspace

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  CURSOR-OPTIMIZATION-FINAL-REPORT.md  LICENSE  MEMORY-INTEGRATION-STATUS.md  MEMORY-SYSTEM-COMPLETION-REPORT.md  MEMORY-TOOL-IMPLEMENTATION-VERIFICATION.md  PHASE-1-VALIDATION-REPORT.md  PHASE3-TESTING-REPORT.md  QUICKSTART.md  README.md  VALIDATION-SUMMARY.md  hook-test.js  package-lock.json  package.json
.bmad-core/: install-manifest.yaml  workflow-state.json
.bmad-workspace/metrics/: metrics-config.json
.bmad-workspace/performance/: TASK-3.8-COMPLETION-REPORT.md  analytics-engine.js  check-performance.js  dashboard.html  monitor-resources.js  optimization-validation.js  performance-api.js  performance-dashboard.html  performance-hooks.js  performance-integration.js  performance-monitor.js  track-operation.js  workspace-performance-optimizer.js
.claude/: conditional-hooks.json  handoff-automation.json  hook-monitor.md  hook-optimization-summary.md  hook-testing-guide.md  hooks.json  integration-hooks.json  intelligent-hooks.json  safety-config.json  safety-system.js  settings.local.json  test-workflow.js  validate-hooks.js  validate-hooks.py
.claude/agent-handoff-templates/: foundation-handoff.json  implementation-handoff.json  quality-handoff.json  security-validation-handoff.json
.cursor/: README.md  completion-config.json  cursor.rules  settings.json
.github/: pull_request_template.md
.serena/: project.yml
Workspace transformation project/: CONSOLIDATED-TRANSFORMATION-PLAN.md  EXECUTION-READINESS-REPORT.md  EXECUTION-STRATEGY.md  NEW-SESSION-KICKOFF-PROMPT.md  NEW-SESSION-RESUME-PROMPT.md  QUALITY-VALIDATION-REPORT.md  SESSION-2-COMPLETION-REPORT.md  SESSION-3-RESUME-PROMPT.md  SPEC-KIT-INSTALLATION-SESSION-PROMPT.md  STEP-1-COMPLETION-REPORT.md  STEP-2-COMPLETION-REPORT.md  WORKSPACE-TRANSFORMATION-PLAN-REFINED.md  🚀 WORKSPACE TRANSFORMATION WORK PLAN STEP 1.md
config/: backup-procedures.json  config-version-control.json  environment-configs.json  eslint-base.config.js  eslint.config.js  migration-tools.json  playwright-mcp.config.json  prettier.config.js  sbom-config.json  scripts-api.json  scripts-base.json  scripts-web.json  validation-systems.json
docs/: DOCKER-GUIDE.md  MCP-SECURITY-SETUP.md  SPEC-KIT-INTEGRATION-PLAN.md  SPEC-KIT-INTEGRATION.md  WORKSPACE_GUIDE.md  agent-skills-reference.md  ai-security-implementation.md  ai-security-tuning-guide.md  bmad-agent-interaction-patterns.md  bmad-collaboration-best-practices.md  bmad-shared-workspace-guidelines.md  bmad-troubleshooting-guide.md  bmad-workflow-best-practices.md  command-reference.md  complex-prompt-chaining-architecture.md  configuration-management.md  context-editing-integration.md  context-editing-summary.md  dependency-analysis-context-ultrathink.md  design-context-engineering-ultrathink.md  external-tool-integration.md  external-tools.md  integration-framework.md  knowledge-base-system.md  mcp-server-designs.md  memory-system-validation-report.md  multi-agent-collaboration-standards.md  multi-language-requirements.md  phase-5-5-completion-summary.md  phase3-section3.3-preparation.md  project-status.md  project-structure.md  project-templates.md  requirements-context-engineering-ultrathink.md  roadmap.md  script-standardization-guide.md  security-analysis-context-engineering-ultrathink.md  security-framework-mapping.md  spec-kit-planning.md  system-capabilities.md  (+6 more)
mcp-servers/: QUICKSTART.md  README-AI-OPTIMIZATION.md  README.md  setup-ai-optimization-servers.js  setup-prompt-servers.js  setup-servers.js
memories/: README.md
projects/: README.md  cursor-optimization-plan.md  custom-skills-development.md  skills-integration-project.md  ultimate_dev_environment_plan.md
scripts/: MEMORY_SCRIPTS_TEST_RESULTS.md  MEMORY_SCRIPTS_USAGE.md  README-create-project-repo.md  bmad-performance-tracker.js  config-manager.js  config-validator.js  create-project-repo.js  init-spec-project.cmd  memory-analytics.js  memory-archive.js  memory-cleanup.js  new-project.js  remove-embedded-repositories.sh  spec-driven-init.ps1  test-phase3-implementations.js  use-spec-kit.cmd  validate-bmad-workflow.js  validate-memory-path.js  validate-templates.js  workspace-health-check.js
templates/python/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
templates/python/.github/workflows/: ci.yml
templates/python/alembic/: env.py
templates/python/app/: __init__.py  main.py
templates/python/app/auth/: __init__.py  dependencies.py  jwt_handler.py  password_manager.py  session_manager.py
templates/python/app/config/: __init__.py  settings.py
templates/python/app/database/: __init__.py  connection.py  models.py
templates/python/app/middleware/: __init__.py  auth.py  error_handler.py  logging.py  rate_limiting.py  security.py
templates/python/app/routes/: __init__.py  auth.py  health.py  users.py
templates/python/app/utils/: __init__.py  logger.py  redis_client.py  security.py
templates/python/requirements/: base.txt  development.txt  production.txt
templates/python/scripts/: run_tests.py  setup_dev.py
templates/python/tests/: __init__.py  conftest.py
templates/python/tests/integration/: test_api_endpoints.py
templates/python/tests/unit/: test_auth.py
tools/: advanced-debugging.js  debug-analytics-dashboard.js  debug-workflow-integration.js  interactive-debug-interface.js  multi-agent-logger.js  project-manager.md
(+554 files in other folders)
